<resources>
    <string name="app_name">Vehicle Renting</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="rep_password">Repeat Password</string>
    <string name="name">Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="surname">Surname</string>
    <string name="personal_id">Personal ID</string>
    <string name="brand">Brand</string>
    <string name="model">Model</string>
    <string name="enrollment">Enrollment</string>
    <string name="price_per_day">Price / Day</string>
    <string name="phone">Phone Number</string>
    <string name="email">Email</string>
    <string name="client_spinner">Client</string>
    <string name="rent_date">Rent Date</string>
    <string name="return_date">Return Date</string>

    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="login">LOGIN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="rent_vehicle">RENT</string>
    <string name="return_vehicle">RETURN</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main_view">MainViewActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Vehicle Renting</string>
    <string name="nav_header_subtitle">Developed by Jorge Velasco</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_vehicles">Vehicles</string>
    <string name="menu_clients">Clients</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="snackbar_deleted_vehicle">1 Vehicle Deleted</string>
    <string name="snackbar_deleted_client">1 Client Deleted</string>
    <string name="snackbar_undo">UNDO</string>
</resources>
